# tTerm

./: .gitignore  .prettierignore  .prettierrc  README.md  README.zh-CN.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release-dev-beta.yml  release-dev.yml  release-main.yml  sync-release-notes.yml
beta-dev/: latest.json
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  frame-desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: mod.rs  paths.rs
src-tauri/src/core/: commands.rs  mod.rs  session.rs  state.rs  supervisor.rs
src-tauri/src/fonts/: mod.rs
src-tauri/src/profiles/: mod.rs
src-tauri/src/session/: mod.rs
src-tauri/src/sftp/: mod.rs  store.rs
src-tauri/src/sftp/internal/: api.rs  connection.rs  paths.rs  types.rs
src-tauri/src/sftp/internal/api/: base.rs  delete.rs  upload.rs
src-tauri/src/sftp/internal/api/delete/: batch.rs  commands.rs
src-tauri/src/sftp/internal/api/upload/: commands.rs
src-tauri/src/ssh/: client.rs  jump.rs  mod.rs  secret_commands.rs  secret_store.rs  store.rs  types.rs
src-tauri/src/terminal/: mod.rs  pty.rs  ssh_query_handler.rs  types.rs
src/components/: AppUpdateManager.tsx  ConnectionDialog.css  ConnectionDialog.tsx  ContextMenu.css  ContextMenu.tsx  ErrorBoundary.tsx  FontSettings.tsx  LanguageSwitcher.tsx  ProfilesPanel.tsx  RenameDialog.tsx  SecretStorageSettings.tsx  SettingsDialog.tsx  SftpDrawer.css  SftpDrawer.tsx  TTermApp.css  TTermApp.tsx  TabBar.css  TabBar.tsx  TerminalPalettePreview.tsx  TerminalTab.css  TerminalTab.tsx  ThemeCard.tsx  ThemeEditor.tsx  (+6 more)
(+98 files in other folders)
