[package]
name = "tTerm"
version = "0.1.0"
description = "A SSH APP"
authors = ["stone"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "t_term_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "fs"] }
russh = { version = "0.58", default-features = false, features = ["ring"] }
russh-sftp = "2.1.1"
async-trait = "0.1"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
rand = "0.8"
zeroize = "1"
ttf-parser = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-plugin-frame = "1.1.6"
keyring = { version = "3.6.3", features = ["windows-native"] }
windows = { version = "0.58", features = ["Win32_Graphics_Gdi", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-frame = "1.1.6"
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", features = ["sync-secret-service"] }
